<resources>
    <string name="app_name">GithubUser2</string>

    <string name="search_github_user">Search Github User</string>
    <string name="search">Search</string>
    <string name="user_id">User ID</string>
    <string name="username">Username</string>
    <string name="notification_image">Notification Icon</string>

    <string name="search_hint">Search User</string>

    <string name="no_user_found">User Not Found</string>
    <string name="no_followers">Not Have Followers</string>
    <string name="no_following">Not Following Anyone</string>

    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="user_profile">User Profile</string>
    <string name="user_repositories">User Repositories</string>
    <string name="user_following">User Following</string>
    <string name="user_followers">User Follower</string>


    <string name="user_office">User Office</string>
    <string name="user_location">User Location</string>

    <string name="developer_name">Ananda Fajar Setyawan</string>
    <string name="email">crackspace990@gmail.com</string>
    <string name="profile">Profile</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>

    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="added">Telah ditambah</string>
    <string name="delete">Hapus</string>
    <string name="delete_message">Hapus?</string>
    <string name="add_message">Tambah?</string>
    <string name="added_success">Sukses</string>
    <string name="deleted">Sukses Dihapus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>