<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:padding="30dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/tvFullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLogin"
                    tools:text="Full Name" />

                <ImageView
                    android:id="@+id/icFollowers"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/user_followers"
                    app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvFullname"
                    app:srcCompat="@drawable/ic_user_followers" />

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toStartOf="@+id/icFollowing"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/icFollowers"
                    app:layout_constraintTop_toTopOf="@+id/icFollowers"
                    tools:text="Follower" />

                <ImageView
                    android:id="@+id/icFollowing"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/user_following"
                    app:layout_constraintEnd_toStartOf="@+id/tvFollowings"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvFollowers"
                    app:layout_constraintTop_toTopOf="@+id/icFollowers"
                    app:srcCompat="@drawable/ic_user_followers" />

                <TextView
                    android:id="@+id/tvFollowings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toStartOf="@+id/icUserRepositories"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/icFollowing"
                    app:layout_constraintTop_toTopOf="@+id/icFollowers"
                    tools:text="Following" />

                <ImageView
                    android:id="@+id/icUserRepositories"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/user_repositories"
                    app:layout_constraintEnd_toStartOf="@+id/tvRepository"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvFollowings"
                    app:layout_constraintTop_toTopOf="@+id/icFollowers"
                    app:srcCompat="@drawable/ic_user_repositories" />

                <TextView
                    android:id="@+id/tvRepository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/icUserRepositories"
                    app:layout_constraintTop_toTopOf="@+id/icFollowers"
                    tools:text="Repository" />

                <ImageView
                    android:id="@+id/icUserOffice"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_office"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icFollowers"
                    app:srcCompat="@drawable/ic_user_office" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icUserOffice"
                    app:layout_constraintTop_toTopOf="@+id/icUserOffice"
                    tools:text="Company" />

                <ImageView
                    android:id="@+id/icUserLocation"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/user_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompany"
                    app:srcCompat="@drawable/ic_user_location" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toEndOf="@+id/icUserLocation"
                    app:layout_constraintTop_toTopOf="@+id/icUserLocation"
                    tools:text="Location" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                app:tabIndicatorColor="@color/colorWhite"
                app:tabSelectedTextColor="@color/colorWhite"
                app:tabTextColor="@color/colorWhite" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>